2005-12-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	Regenerate the plugin hiearchy.

2005-12-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* gst/id3demux/gstid3demux.c: (gst_id3demux_get_type),
	(gst_id3demux_base_init), (gst_id3demux_class_init),
	(gst_id3demux_chain):
	* gst/id3demux/gstid3demux.h:
	  Add documentation for id3demux.
	  Don't fail if the first buffer is not at offset 0, just
	  attempt to typefind and do pass through
	  Rename the gst_type function from gst_gst_id3demux..

2005-12-20  Michael Smith  <msmith@fluendo.com>

	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_render),
	(gst_multiudpsink_add), (gst_multiudpsink_remove),
	(gst_multiudpsink_get_stats):
	* gst/udp/gstmultiudpsink.h:
	  Collect statistics; return them from get_stats.

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_stream_scan):
	Stupid signedness issue...

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* gst/avi/gstavidemux.c: (gst_avi_demux_reset),
	(gst_avi_demux_handle_src_event), (gst_avi_demux_parse_stream),
	(gst_avi_demux_parse_odml), (gst_avi_demux_peek_tag),
	(gst_avi_demux_next_data_buffer), (gst_avi_demux_stream_scan),
	(gst_avi_demux_stream_header), (gst_avi_demux_loop):
	Construct index for indexless files.
	Make sure pad/buffers are correctly reset to NULL once we don't need
	them anymore, else we get lovely segfaults/assertions.
	* gst/wavparse/gstwavparse.c:
	Yes, you can have 96KHz audio and wma in wav :(

2005-12-18  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	  Check for optional dependency on zlib for id3demux

	* gst/id3demux/Makefile.am:
	* gst/id3demux/gstid3demux.c: (gst_gst_id3demux_get_type),